--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: #ff8;
 }
 
 h1 {
@@ -37,6 +37,7 @@ h1 {
 h2 {
   font-size: 1.5em;
   margin-top: .5em;
+  font-style:italic;
 }
 
 h3 {
